<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:text="@string/planning" />

    <TextView
        android:id="@+id/slot1"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slot1" />

    <TextView
        android:id="@+id/slot2"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slot2" />

    <TextView
        android:id="@+id/slot3"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slot3" />

    <TextView
        android:id="@+id/slot4"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slot4" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/file_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_data" />

        <Button
            android:id="@+id/db_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/db_data" />

    </LinearLayout>

</LinearLayout>